syntax = "proto3";
package Cratis.Chronicle.Contracts.Identities;

message GetIdentitiesRequest {
   string EventStore = 1;
   string Namespace = 2;
}
message IEnumerable_Identity {
   repeated Identity items = 1;
}
message Identity {
   string Subject = 1;
   string Name = 2;
   string UserName = 3;
   Identity OnBehalfOf = 4;
}
service Identities {
   rpc GetIdentities (GetIdentitiesRequest) returns (IEnumerable_Identity);
   rpc ObserveIdentities (GetIdentitiesRequest) returns (stream IEnumerable_Identity);
}
